adiciona conteúdos dos produtos, faltando estilisar. Falta escrever conteudo do GPDR e MSP

--- a/index.html
+++ b/index.html
@@ -67,25 +67,58 @@
                 <div class="texto-produtos">
                     <h4>Troque a anotação pela automação</h4>
                     <h2>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h2>
-                    <p>A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.</p>
-                    <p>Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, computadores etc.</p>
-                    <p>Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.</p>
-                    <p>Agora, se você esta procurando a melhor solução para gestão da sua empresa, clique <strong><a href="https://hiper.com.br/experimente-gratis?HCode=BIS01625" target="_blank" rel="noopener noreferrer">aqui</a></strong> e Experimente grátis por 7 dias!<br/></p>
+                    <p>
+                        A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.
+                    </p>
+                    <p>
+                        Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, computadores etc.
+                    </p>
+                    <p>
+                        Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+                    </p>
+                    <p>
+                        Agora, se você esta procurando a melhor solução para gestão da sua empresa, clique <strong><a href="https://hiper.com.br/experimente-gratis?HCode=BIS01625" target="_blank" rel="noopener noreferrer">aqui</a></strong> e Experimente grátis por 7 dias!<br/>
+                    </p>
                 </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
             <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud">
-                <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                <div class="texto-produtos">
+                    <h4>Backup corporativo na nuvem</h4>
+                    <h2>Guarde o que é importante com segurança, sem ocupar espaço algum!</h2>
+                    <p>
+                        As informações corporativas estão cada vez mais digitalizadas e online. Por isso, as empresas devem se prevenir contra a perda de informações importantes e, para tanto, precisam adotar políticas de backup eficazes que contemplem o armazenamento fora do ambiente produtivo.
+                    </p>
+                    <p>
+                        Com o backup na nuvem você resguarda o seu negócio, ajudando a proteger os arquivos importantes de que a sua empresa precisa. Restaure rapidamente os arquivos após uma falha do sistema ou perda de dados, para retomar o funcionamento normal logo em seguida.
+                    </p>
+                    <p>
+                        O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com a <a href="https://www.bistec.com.br/portfolio/bistec-lgpd/">Lei Geral de Proteção de Dados (LGPD)</a>.
+                    </p>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-edu">
             <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
-                <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                <div class="texto-produtos">
+                    <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
+                    <p>
+                        Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas. A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
+                    </p>
+                    <p>
+                        Contamos com profissionais com mais de 25 anos de experiência acadêmica e certificado educador Google nível 1. Prestando serviços para <strong>universidades e empresas de toda a Baixada Santista.</strong>
+                    </p>
+                    <p>
+                        Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: <strong>o usuário.</strong>
+                    </p>
+                    <p>
+                        Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
+                    </p>
+                    <p>
+                        O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
+                    </p>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-gpdr">
@@ -97,30 +130,83 @@
 
         <section class="bistec-produtos" id="bistec-outsourcing">
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
-                <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                <div class="texto-produtos">
+                    <h4 class="widget-title">Contrate outsourcing de TI</h4><p>
+                        <h2>Contrate técnicos preparados para cuidar de sua empresa.</h2>
+                        <p>
+                            Por um valor mensal, sua empresa pode contar com suporte técnico telefônico e on-line, além de visitas técnicas preventivas e corretivas. Realizamos manutenções periódicas e resolvemos casos mais graves em seus equipamentos, com o compromisso de atender de forma rápida e eficiente.
+                        </p>
+                        <p>
+                            Nossos técnicos são treinados e capacitados para instalar hardware e software em sua empresa. Isto torna o serviço muito mais rápido e eficaz. Evitando o seu deslocamento, realizamos uma visita técnica a sua empresa para solucionar o problema, seja ele de equipamento ou de software.
+                        </p>
+                        <p>
+                            Ao contratar nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa e pode contar com todo o nosso suporte técnico.<br>
+                        </p>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-renting">
             <img src="assets/images/img-lg-bistec-renting.png" alt="Bistec Renting">
-                <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                <div class="texto-produtos">
+                    <h4>Renting de TI</h4>
+                        <h2>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h2>
+                        <p>
+                            Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
+                        </p>
+                        <p>
+                            Esta é a solução mais atrativa do mercado, permitindo que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos. Melhore assim a sua classificação de crédito.
+                        </p>
+                        <p>Principais vantagens:</p>
+                        <ul>
+                            <li>Não descapitaliza a empresa</li>
+                            <li>Incentivos fiscais</li>
+                            <li>Parcelas Fixas</li>
+                            <li>Equipamentos sempre Atualizados</li>
+                            <li>Maior Eficiência em TI</li>
+                            <li>Locação 100% sem entrada</li>
+                        </ul>
+                        <p>
+                            Tenha acesso a tecnologia de ponta, e quando o contrato acabar, você pode fazer upgrade nos equipamentos.
+                        </p>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-soft">
             <img src="assets/images/img-lg-bistec-soft.png" alt="Bistec Soft">
-                <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                <div class="texto-produtos">
+                    <h4>Todo tipo de software</h4><p>
+                        <h2>O Bistec soft agora cuida do seu site e contas de e-mail!</h2>
+                        <p>
+                            Se você esta procurando um Software para Automação Comercial, clique <strong><a href="https://www.bistec.com.br/portfolio/bistec-automacao/">aqui</a></strong> e você será direcionado para a página BISTEC Automação.
+                        </p>
+                        <p>Possuímos soluções para diversos segmentos.</p>
+                        <ul>
+                            <li>Desenvolvimento de Sites institucionais / e-commerce + domínio + hospedagem + manutenção + suporte</li>
+                            <li>Solução de chat online para sites. Clique <a href="https://www.jivochat.com.br/?partner_id=23677&amp;pricelist_id=114&amp;lang=pt" target="_blank" rel="noopener noreferrer"><strong>aqui</strong></a> e teste por 14 dias</li>
+                            <li>Software de roteirização (logística)</li>
+                            <li>Antivírus</li>
+                            <li>Realidade Aumentada</li>
+                        </ul>
+
+                        <h2>Crie já o seu site institucional</h2>
+                        <p>
+                            Tenha um site (www.nomedaminhaempresa.com.br) hospedado em servidor com alta disponibilidade e contas de e-mail profissionais para sua empresa. (contato@nomedaminhaempresa.com.br)
+                        </p>
+                        <p>Contrate agora e obtenha:</p>
+                        <ul>
+                            <li>1 site com domínio .com.br</li>
+                            <li>100 GB de armazenamento</li>
+                            <li>SSL Grátis</li>
+                            <li>Contas de e-mail ilimitadas</li>
+                        </ul>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
-                <h4 class="texto-produtos">
+                <div class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h4>
+                </div>
         </section>
     </article>
 
