corrige caminho da imagem

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automaçao">
-                <img src="assets/images/img-lg-bistec-automação.png" alt="Bistec Automação">
+                <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h4>
