--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h4>
-                    <button onclick="controlaDialog('dialog-automacao')" id="bt-dialog">Saiba mais</button>
-                    <dialog id="dialog-automacao">
+                    <button onclick="controlaDialog('dialog-automacao')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-automacao" class="dialog-produtos">
                         <p>
                             A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.
                         </p>
@@ -109,36 +109,49 @@
             <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
                 <div class="texto-produtos">
                     <h4>Treinamentos: use a tecnologia com capacidade máxima.</h4>
-                    <p>
-                        Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas. A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
-                    </p>
-                    <p>
-                        Contamos com profissionais com mais de 25 anos de experiência acadêmica e certificado educador Google nível 1. Prestando serviços para <strong>universidades e empresas de toda a Baixada Santista.</strong>
-                    </p>
-                    <p>
-                        Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: <strong>o usuário.</strong>
-                    </p>
-                    <p>
-                        Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
-                    </p>
-                    <p>
-                        O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
-                    </p>
+                    <button onclick="controlaDialog('dialog-edu')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-edu" class="dialog-produtos">
+                        <p>
+                            Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas. A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
+                        </p>
+                        <p>
+                            Contamos com profissionais com mais de 25 anos de experiência acadêmica e certificado educador Google nível 1. Prestando serviços para <strong>universidades e empresas de toda a Baixada Santista.</strong>
+                        </p>
+                        <p>
+                            Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: <strong>o usuário.</strong>
+                        </p>
+                        <p>
+                            Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
+                        </p>
+                        <p>
+                            O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
+                        </p>
+                    </dialog>
                 </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-gpdr">
             <img src="assets/images/img-lg-GPDR.png" alt="Bistec GDPR">
-                <h2 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                </h2>
+            <div class="texto-produtos">
+                    <h4>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </h4>
+                    <button onclick="controlaDialog('dialog-gdpr')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-gdpr" class="dialog-produtos">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                        </p>
+                    </dialog>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-outsourcing">
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
                 <div class="texto-produtos">
-                    <h2 class="widget-title">Contrate outsourcing de TI</h2><p>
+                    <h2>Contrate outsourcing de TI</h2><p>
                         <h4>Contrate técnicos preparados para cuidar de sua empresa.</h4>
+                        <button onclick="controlaDialog('dialog-outsourcing')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-outsourcing" class="dialog-produtos">
                         <p>
                             Por um valor mensal, sua empresa pode contar com suporte técnico telefônico e on-line, além de visitas técnicas preventivas e corretivas. Realizamos manutenções periódicas e resolvemos casos mais graves em seus equipamentos, com o compromisso de atender de forma rápida e eficiente.
                         </p>
@@ -148,6 +161,7 @@
                         <p>
                             Ao contratar nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa e pode contar com todo o nosso suporte técnico.<br>
                         </p>
+                    </dialog>
                 </div>
         </section>
 
@@ -156,6 +170,8 @@
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                         <h4>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h4>
+                        <button onclick="controlaDialog('dialog-renting')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-renting" class="dialog-produtos">
                         <p>
                             Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
                         </p>
@@ -174,6 +190,7 @@
                         <p>
                             Tenha acesso a tecnologia de ponta, e quando o contrato acabar, você pode fazer upgrade nos equipamentos.
                         </p>
+                    </dialog>
                 </div>
         </section>
 
@@ -182,6 +199,8 @@
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                         <h4>O Bistec soft agora cuida do seu site e contas de e-mail!</h4>
+                        <button onclick="controlaDialog('dialog-soft')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-soft" class="dialog-produtos">
                         <p>
                             Se você esta procurando um Software para Automação Comercial, clique <strong><a href="https://www.bistec.com.br/portfolio/bistec-automacao/">aqui</a></strong> e você será direcionado para a página BISTEC Automação.
                         </p>
@@ -205,13 +224,22 @@
                             <li>SSL Grátis</li>
                             <li>Contas de e-mail ilimitadas</li>
                         </ul>
+                    </dialog>
                 </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
                 <div class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <h4>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </h4>
+                    <button onclick="controlaDialog('dialog-msp')" class="bt-dialog">Saiba mais</button>
+                    <dialog id="dialog-msp" class="dialog-produtos">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                        </p>
+                    </dialog>
                 </div>
         </section>
     </article>
@@ -272,6 +300,7 @@
 
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script>
+        //Funções dos links das redes socias ------------------------------------------------
         function link(site){
             window.open(`https://${site}`, "_blank"); 
         }
@@ -283,19 +312,19 @@
             console.log("oi")
         }
 
-        //Funções do Pop-up
-        function controlaDialog(tt){
-            if(document.getElementBy(tt).open){
-                fechaDialog()
+        //Funções do Pop-up -----------------------------------------------------------------
+        function controlaDialog(idDialog){
+            if(document.getElementById(idDialog).open){
+                fechaDialog(idDialog)
             }else{
-                abreDialog()
+                abreDialog(idDialog)
             }
         }
-        function fechaDialog(){
-            document.getElementById("dialog").removeAttribute("open")
+        function fechaDialog(idDialog){
+            document.getElementById(idDialog).removeAttribute("open")
         }
-        function abreDialog(){
-            document.getElementById("dialog").setAttribute("open", "")
+        function abreDialog(idDialog){
+            document.getElementById(idDialog).setAttribute("open", "")
         }
     </script>
 </body>
