--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-PT">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,19 +17,20 @@
                 <li>
                     <a href="#bistec-automaçao" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
-                        <li><a href="#bistec-automaçao">BISTEC AUTOMAÇÃO</a></li>
-                        <li><a href="#bistec-cloud">BISTEC CLOUD</a></li>
-                        <li><a href="#bistec-edu">BISTEC EDU</a></li>
-                        <li><a href="#bistec-gpdr">BISTEC GDPR</a></li>
-                        <li><a href="#bistec-outsourcing">BISTEC OUTSOURCING</a></li>
-                        <li><a href="#bistec-renting">BISTEC RENTING</a></li>
-                        <li><a href="#bistec-soft">BISTEC SOFT</a></li>
-                        <li><a href="#bistec-msp">BISTEC MSP</a></li>
+                        <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
+                        <li><a href="#bistec-cloud"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
+                        <li><a href="#bistec-edu"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
+                        <li><a href="#bistec-gpdr"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
+                        <li><a href="#bistec-msp"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
+                        <li><a href="#bistec-outsourcing"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
+                        <li><a href="#bistec-renting"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
+                        <li><a href="#bistec-soft"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
+                        <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                     </ul> 
                 </li>
                 <li><a href="#contacts_section" class=" normal">CONTATO</a></li>
             </ul>
-            <ul>
+            <ul class="buttons-menu">
                 <li>
                     <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
                         <button type="button" class="button" >
@@ -47,6 +48,13 @@
                     </a>
                 </li>
             </ul>
+            <ul class="menu-cell">
+                <li>
+                    <a href="#">
+                        <ion-icon name="menu-outline" onclick="menuResponsive()"></ion-icon>
+                    </a>                    
+                </li>
+            </ul>
     </header>
 
     <!-- CORPO -->
@@ -56,7 +64,7 @@
             <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
-                <p>Serviços em tecnologia para todas as empresas</p>
+                <h2>Serviços em tecnologia para todas as empresas</h2>
             </div>
         </section>
 
@@ -64,57 +72,106 @@
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automaçao">
                 <img src="assets/images/img-lg-bistec-automação.png" alt="Bistec Automação">
-                    <h4 class="texto-produtos">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                    </h4>
+                    <div class="texto-produtos">
+                        <h3>Troque a anotação pela automação</h2>
+                        <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h4>
+                        <h5>A Bistec, já consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.</h5>
+                    </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
-            <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud">
+            <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud" id="img-bistec-cloud">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-edu">
             <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-gpdr">
             <img src="assets/images/img-lg-GPDR.png" alt="Bistec GDPR">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-outsourcing">
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-renting">
             <img src="assets/images/img-lg-bistec-renting.png" alt="Bistec Renting">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-soft">
             <img src="assets/images/img-lg-bistec-soft.png" alt="Bistec Soft">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
                 <h4 class="texto-produtos">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                </h4>
+        </section>
+
+        <section class="bistec-produtos" id="bistec-msp">
+            <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
+                <h4 class="texto-produtos">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
                 </h4>
         </section>
     </article>
@@ -183,7 +240,11 @@
         }
 
         function teste(){
-            console.log("oi")
+            console.log("oi");
+        }
+
+        function menuResponsive(){
+            console.log('testando');
         }
     </script>
 </body>
