adiciona imagens dos WIFI, MSP, favicon. Melhora pouquissimo o texto Edu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início - Bistec Portugal</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/logo-bistec-favicon.png">
 </head>
 <body>
     <!-- cabeçalho -->
@@ -74,7 +75,7 @@
                 <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
-                    <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h4>
+                    <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h4>
                     <button onclick="controlaDialog('dialog-automacao')" class="bt-dialog">Saiba mais</button>
                     <dialog id="dialog-automacao" class="dialog-produtos">
                         <p>
@@ -116,11 +117,12 @@
         <section class="bistec-produtos" id="bistec-edu">
             <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
                 <div class="texto-produtos">
-                    <h4>Treinamentos: use a tecnologia com capacidade máxima.</h4>
+                    <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
+                    <h4>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h4>
                     <button onclick="controlaDialog('dialog-edu')" class="bt-dialog">Saiba mais</button>
                     <dialog id="dialog-edu" class="dialog-produtos">
                         <p>
-                            Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas. A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
+                            A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
                         </p>
                         <p>
                             Contamos com profissionais com mais de 25 anos de experiência acadêmica e certificado educador Google nível 1. Prestando serviços para <strong>universidades e empresas de toda a Baixada Santista.</strong>
@@ -141,16 +143,17 @@
         <section class="bistec-produtos" id="bistec-gpdr">
             <img src="assets/images/img-lg-GPDR.png" alt="Bistec GDPR">
             <div class="texto-produtos">
-                    <h4>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                    </h4>
-                    <button onclick="controlaDialog('dialog-gdpr')" class="bt-dialog">Saiba mais</button>
-                    <dialog id="dialog-gdpr" class="dialog-produtos">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                        </p>
-                    </dialog>
-                </div>
+                <h2>Vestibulum accumsan sem ornare libero sodales elementum</h2>
+                <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan.
+                </h4>
+                <button onclick="controlaDialog('dialog-gdpr')" class="bt-dialog">Saiba mais</button>
+                <dialog id="dialog-gdpr" class="dialog-produtos">
+                    <p>
+                        GPDR Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                </dialog>
+            </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-outsourcing">
@@ -239,13 +242,14 @@
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
                 <div class="texto-produtos">
+                    <h2>Vestibulum accumsan sem ornare libero sodales elementum</h2>
                     <h4>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                     </h4>
                     <button onclick="controlaDialog('dialog-msp')" class="bt-dialog">Saiba mais</button>
                     <dialog id="dialog-msp" class="dialog-produtos">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                            MSP Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                         </p>
                     </dialog>
                 </div>
@@ -253,14 +257,21 @@
 
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
-                <h4 class="texto-produtos">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                    </p>
+            <div class="texto-produtos">
+                <h2>Vestibulum accumsan sem ornare libero sodales elementum</h2>
+                <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
+                <button onclick="controlaDialog('dialog-wifi')" class="bt-dialog">Saiba mais</button>
+                <dialog id="dialog-wifi" class="dialog-produtos">
+                    <p>
+                        Wifi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </p>
+                </dialog>
+            </div>
         </section>
     </article>
 
