--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h4>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h4>
-                    <button onclick="controlaDialog('dialog-automacao')" class="bt-dialog">Saiba mais</button>
+                    <button onclick="controlaDialog('dialog-automacao')" class="bt-dialog">
+                        <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                        <span class="button_text">Saiba Mais</span>                    
+                    </button>
                     <dialog id="dialog-automacao" class="dialog-produtos">
                         <p>
                             A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.
@@ -99,7 +102,10 @@
                 <div class="texto-produtos">
                     <h2>Backup corporativo na nuvem</h2>
                     <h4>Guarde o que é importante com segurança, sem ocupar espaço algum!</h4>
-                    <button onclick="controlaDialog('dialog-cloud')">Saiba mais</button>
+                    <button onclick="controlaDialog('dialog-cloud')" class="bt-dialog">
+                        <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                        <span class="button_text">Saiba Mais</span>                    
+                    </button>
                     <dialog id="dialog-cloud">
                         <p>
                             As informações corporativas estão cada vez mais digitalizadas e online. Por isso, as empresas devem se prevenir contra a perda de informações importantes e, para tanto, precisam adotar políticas de backup eficazes que contemplem o armazenamento fora do ambiente produtivo.
@@ -119,7 +125,10 @@
                 <div class="texto-produtos">
                     <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                     <h4>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h4>
-                    <button onclick="controlaDialog('dialog-edu')" class="bt-dialog">Saiba mais</button>
+                    <button onclick="controlaDialog('dialog-edu')" class="bt-dialog">
+                        <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                        <span class="button_text">Saiba Mais</span>                    
+                    </button>
                     <dialog id="dialog-edu" class="dialog-produtos">
                         <p>
                             A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
@@ -147,7 +156,10 @@
                 <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan.
                 </h4>
-                <button onclick="controlaDialog('dialog-gdpr')" class="bt-dialog">Saiba mais</button>
+                <button onclick="controlaDialog('dialog-gdpr')" class="bt-dialog">
+                    <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                    <span class="button_text">Saiba Mais</span>                    
+                </button>
                 <dialog id="dialog-gdpr" class="dialog-produtos">
                     <p>
                         GPDR Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
@@ -160,8 +172,11 @@
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
                 <div class="texto-produtos">
                     <h2>Contrate outsourcing de TI</h2><p>
-                        <h4>Contrate técnicos preparados para cuidar de sua empresa.</h4>
-                        <button onclick="controlaDialog('dialog-outsourcing')" class="bt-dialog">Saiba mais</button>
+                    <h4>Contrate técnicos preparados para cuidar de sua empresa.</h4>
+                    <button onclick="controlaDialog('dialog-outsourcing')" class="bt-dialog">
+                        <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                        <span class="button_text">Saiba Mais</span>                    
+                    </button>
                     <dialog id="dialog-outsourcing" class="dialog-produtos">
                         <p>
                             Por um valor mensal, sua empresa pode contar com suporte técnico telefônico e on-line, além de visitas técnicas preventivas e corretivas. Realizamos manutenções periódicas e resolvemos casos mais graves em seus equipamentos, com o compromisso de atender de forma rápida e eficiente.
@@ -181,7 +196,10 @@
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                         <h4>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h4>
-                        <button onclick="controlaDialog('dialog-renting')" class="bt-dialog">Saiba mais</button>
+                        <button onclick="controlaDialog('dialog-renting')" class="bt-dialog">
+                            <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                            <span class="button_text">Saiba Mais</span>                    
+                        </button>
                     <dialog id="dialog-renting" class="dialog-produtos">
                         <p>
                             Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
@@ -210,7 +228,10 @@
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                         <h4>O Bistec soft agora cuida do seu site e contas de e-mail!</h4>
-                        <button onclick="controlaDialog('dialog-soft')" class="bt-dialog">Saiba mais</button>
+                        <button onclick="controlaDialog('dialog-soft')" class="bt-dialog">
+                            <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                            <span class="button_text">Saiba Mais</span>                    
+                        </button>
                     <dialog id="dialog-soft" class="dialog-produtos">
                         <p>
                             Se você esta procurando um Software para Automação Comercial, clique <strong><a href="https://www.bistec.com.br/portfolio/bistec-automacao/">aqui</a></strong> e você será direcionado para a página BISTEC Automação.
@@ -246,7 +267,10 @@
                     <h4>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                     </h4>
-                    <button onclick="controlaDialog('dialog-msp')" class="bt-dialog">Saiba mais</button>
+                    <button onclick="controlaDialog('dialog-msp')" class="bt-dialog">
+                        <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                        <span class="button_text">Saiba Mais</span>                    
+                    </button>
                     <dialog id="dialog-msp" class="dialog-produtos">
                         <p>
                             MSP Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
@@ -262,7 +286,10 @@
                 <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
-                <button onclick="controlaDialog('dialog-wifi')" class="bt-dialog">Saiba mais</button>
+                <button onclick="controlaDialog('dialog-wifi')" class="bt-dialog">
+                    <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
+                    <span class="button_text">Saiba Mais</span>                    
+                </button>
                 <dialog id="dialog-wifi" class="dialog-produtos">
                     <p>
                         Wifi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
