--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
                         <span class="button_text">Saiba Mais</span>                    
                     </button>
-                    <dialog id="dialog-cloud">
+                    <dialog id="dialog-cloud" class="dialog-produtos">
                         <p>
                             As informações corporativas estão cada vez mais digitalizadas e online. Por isso, as empresas devem se prevenir contra a perda de informações importantes e, para tanto, precisam adotar políticas de backup eficazes que contemplem o armazenamento fora do ambiente produtivo.
                         </p>
